--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ LOG_LEVEL=debug
 HTTP_PORT=:8080
 CASBIN_CONFIG_PATH=configs/rbac_model.conf
 MIDDLEWARE_ROLES_PATH=configs/models.csv
+
+
+POSTGRES_HOST="0.0.0.0"
+POSTGRES_PORT=5432
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="12345"
+POSTGRES_DATABASE="banking_db"
