--- a/.env
+++ b/.env
@@ -9,4 +9,8 @@ POSTGRES_HOST="0.0.0.0"
 POSTGRES_PORT=5432
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="12345"
-POSTGRES_DATABASE="banking_db"
+POSTGRES_DB="banking_db"
+
+JWT_SECRET_KEY="$ome$ecretKey"
+JWT_SECRET_KEY_REFRESH="$ome$ecretKeyForJWTRefresh"
+CONTEXT_TIMEOUT_SECONDS=5
